Fix [Bug]: overflow:hidden on .gjs-block-label clips the text #946

--- a/src/styles/scss/_gjs_blocks.scss
+++ b/src/styles/scss/_gjs_blocks.scss
@@ -71,7 +71,6 @@
   font-size: 0.65rem;
   font-weight: normal;
   font-family: Helvetica, sans-serif;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
 
